--- a/PBMyRequests/src/main/resources/bootstrap.yaml
+++ b/PBMyRequests/src/main/resources/bootstrap.yaml
@@ -1,14 +1,14 @@
 spring:
   application:
-    name: PBMyRequests
+    name: pb-myrequests-service
   cloud:
     config:
       enabled: true
-      uri: http://localhost:8081
+      uri: http://pb-config-service:8081
   datasource:
-    url: jdbc:postgresql://localhost:5432/MyRequests
-    username: postgres
-    password: MyPostgre74SQL38
+    url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_DBNAME}
+    username: ${DB_USER}
+    password: ${DB_PASSWORD}
   jpa:
     hibernate:
       ddl-auto: update
