--- a/PBConfig/src/main/resources/application.yaml
+++ b/PBConfig/src/main/resources/application.yaml
@@ -6,7 +6,7 @@ spring:
       server:
         git:
           default-label: main
-          uri: https://github.com/Franciscoxd1123/Kubernetes.git
+          uri: https://github.com/Franciscoxd1123/Kubernetes
           search-paths: config-data
   application:
-    name: PBConfig
+    name: pb-config-service
