--- a/deployment/postgres-config-map.yaml
+++ b/deployment/postgres-config-map.yaml
@@ -7,20 +7,20 @@ metadata:
 data:
   DB_HOST_PBCLIENT: "pb-client-db-service"
   DB_PORT_PBCLIENT: "5432"
-  DB_DBNAME_PBCLIENT: "Clients"
+  DB_DBNAME_PBCLIENT: "clients"
 
   DB_HOST_PBREQUEST: "pb-request-db-service"
   DB_PORT_PBREQUEST: "5432"
-  DB_DBNAME_PBREQUEST: "Requests"
+  DB_DBNAME_PBREQUEST: "requests"
 
   DB_HOST_PBMYREQUESTS: "pb-myrequests-db-service"
   DB_PORT_PBMYREQUESTS: "5432"
-  DB_DBNAME_PBMYREQUESTS: "MyRequests"
+  DB_DBNAME_PBMYREQUESTS: "myrequests"
 
   DB_HOST_PBEVALUATION: "pb-evaluation-db-service"
   DB_PORT_PBEVALUATION: "5432"
-  DB_DBNAME_PBEVALUATION: "Evaluation"
+  DB_DBNAME_PBEVALUATION: "evaluation"
 
   DB_HOST_PBSIMULATION: "pb-simulation-db-service"
   DB_PORT_PBSIMULATION: "5432"
-  DB_DBNAME_PBSIMULATION: "Simulation"
+  DB_DBNAME_PBSIMULATION: "simulation"
