--- a/deployment/pb-gateway-deployment.yaml
+++ b/deployment/pb-gateway-deployment.yaml
@@ -15,7 +15,7 @@ spec:
         app: pb-gateway-deployment
     spec:
       containers:
-        - name: pbgateway
+        - name: pb-gateway-service
           image: franciscoxd1123/pbgateway
           ports:
             - containerPort: 8080
