--- a/config-data/PBEureka.yaml
+++ b/config-data/PBEureka.yaml
@@ -5,4 +5,4 @@ eureka:
     fetch-registry: false
     register-with-eureka: false
     service-url: 
-      default-zone: http://pb-eureka-service:8761/eureka/
+      defaultZone: http://pb-eureka-service:8761/eureka/
