--- a/deployment/pb-config-deployment.yaml
+++ b/deployment/pb-config-deployment.yaml
@@ -15,7 +15,7 @@ spec:
         app: pb-config-deployment
     spec:
       containers:
-        - name: pbconfig
+        - name: pb-config-service
           image: franciscoxd1123/pbconfig
           ports:
             - containerPort: 8081
@@ -33,4 +33,4 @@ spec:
     - protocol: TCP
       port: 8081
       targetPort: 8081
-  type: LoadBalancer
+  type: NodePort
