--- a/config-data/PBGateway.yaml
+++ b/config-data/PBGateway.yaml
@@ -25,8 +25,8 @@ spring:
             allowedMethods: "*"
             allowedHeaders: "*"
       routes:
-        - id: pb-client-service
-          uri: lb://pb-client-service
+        - id: PBClient
+          uri: lb://PBClient
           predicates:
             - Path=/app/micro/clients/**
         - id: pb-request-service
