--- a/deployment/pb-client-deployment.yaml
+++ b/deployment/pb-client-deployment.yaml
@@ -51,9 +51,9 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: pb-client-service
+  name: PBClient
   labels:
-    app: pb-client-service
+    app: PBClient
 spec:
   selector:
     app: pb-client-deployment
