--- a/pb-client-service/pom.xml
+++ b/pb-client-service/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>PBClient</artifactId>
+	<artifactId>pb-client-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>PBClient</name>
 	<description>Demo project for Spring Boot</description>
