--- a/pb-client-service/pom.xml
+++ b/pb-client-service/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.example</groupId>
 	<artifactId>pb-client-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>PBClient</name>
+	<name>pb-client-service</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
