--- a/pb-request-service/pom.xml
+++ b/pb-request-service/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>PBSimulation</artifactId>
+	<artifactId>pb-request-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>PBSimulation</name>
+	<name>pb-request-service</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
@@ -94,6 +94,6 @@
 				</configuration>
 			</plugin>
 		</plugins>
-		<finalName>PBSimulation</finalName>
+		<finalName>PBRequest</finalName>
 	</build>
 </project>
